--- a/culture_tourism/templates/maqol.html
+++ b/culture_tourism/templates/maqol.html
@@ -1,5 +1,6 @@
 <!-- portfolio + collapse info qo'shilsin -->
 <!DOCTYPE html>
+{% load i18n %}
 <html>
 
 <head>
@@ -7,7 +8,7 @@
 	<meta charset="utf-8">
 	<!-- set the viewport width and initial-scale on mobile devices -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>UzNation</title>
+	<title>{% trans 'UzNation' %}</title>
 	<!-- include the site animate stylesheet -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- include the site bootstrap stylesheet -->
