--- a/templates/news.html
+++ b/templates/news.html
@@ -15,7 +15,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         {% for sub in m.sub_menu.all %}
-                            <li><a href="{% url 'uznation:menu' m_menu=m.name|slugify submenu=sub.name|slugify %}">{{ sub.name }}</a></li>
+                            <li><a href="{% url 'uznation:menu' pk=sub.pk %}">{{ sub.name }}</a></li>
                         {% endfor %}
                     </ul>
                 </li>
@@ -133,7 +133,7 @@
 <ul class="sub-nav">
     {% for m in menus.all %}
         {% if not m.sub_menu %}
-            <li><a href="{% url 'uznation:info-m' menu=m.name %}">{{ m.name }}</a></li>
+            <li><a href="#">{{ m.name }}</a></li>
         {% endif %}
     {% endfor %}
 </ul>
